[package]
name = "reclip"
version = "0.2.0"
edition = "2021"
description = "Менеджер истории буфера обмена (Win+V) для Linux GNOME/Wayland"
license = "MIT"

# Зависимости добавляются по мере надобности по этапам (см. TODO.md).
# Полный список утверждён в docs/08-tech-decisions.md (8.3).
[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
anyhow = "1"
directories = "5"
log = "0.4"
env_logger = "0.11"
fs2 = "0.4" # файловая блокировка (flock) для single-instance демона (3.3)
# окно пикера (Этап 5); требует системную libgtk-4-dev. Фича v4_6 — для
# gdk::Texture::from_bytes (миниатюры/вставка картинок, Этап И4).
gtk4 = { version = "0.9", features = ["v4_6"] }
# PNG-кодек для картинок (Этап И1). default-features off — берём только png,
# чтобы не тянуть все форматы. Чистый Rust, системных зависимостей нет.
image = { version = "0.25", default-features = false, features = ["png"] }

[[bin]]
name = "reclip"
path = "src/main.rs"

[lib]
name = "reclip"
path = "src/lib.rs"
